[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/in_game_menu.gd" type="Script" id=1]
[ext_resource path="res://menus/option_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/button.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://world/FFFFORWA.TTF"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "options"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("option_menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1600, 400 ), Vector2( 450, 400 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "trans"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("trans:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1500, 0 ) ]
}

[node name="in_game_menu" type="Node2D"]
pause_mode = 2
z_index = 4096
z_as_relative = false
script = ExtResource( 1 )

[node name="trans" type="Node2D" parent="."]
z_index = 4096
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="trans"]
margin_left = 1298.17
margin_top = -237.997
margin_right = 3282.17
margin_bottom = 973.003
color = Color( 0, 0, 0, 1 )

[node name="option_menu" parent="." instance=ExtResource( 2 )]
position = Vector2( 1600, 400 )
z_index = -1

[node name="buttons" type="Node2D" parent="."]
position = Vector2( -125, -35 )
z_index = -1

[node name="options" parent="buttons" instance=ExtResource( 3 )]
pause_mode = 2
editor/display_folded = true
margin_left = 300.0
margin_right = 550.0

[node name="Label" type="Label" parent="buttons/options"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPTIONS"
align = 1
valign = 1

[node name="retry" parent="buttons" instance=ExtResource( 3 )]
pause_mode = 2
editor/display_folded = true
margin_right = 250.0

[node name="Label" type="Label" parent="buttons/retry"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RETRY"
align = 1
valign = 1

[node name="exit" parent="buttons" instance=ExtResource( 3 )]
pause_mode = 2
editor/display_folded = true
margin_left = 600.0
margin_right = 850.0

[node name="Label" type="Label" parent="buttons/exit"]
margin_top = 8.0
margin_right = 250.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXIT"
align = 1
valign = 1

[node name="anims" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/options = SubResource( 3 )
anims/trans = SubResource( 4 )
[connection signal="pressed" from="buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="buttons/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="anims" to="." method="_on_anims_animation_finished"]
